# ai-backend

./: pyproject.toml
app/: dependencies.py  main.py  middleware.py  schemas.py
app/routers/: chat_crew.py  chat_langchain.py
